--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "macro-survey",
   "version": "1.0.0",
   "engines": {
-    "node": "14.x",
-    "npm": "7.x"
+    "node": "16.9.1",
+    "npm": "7.21.1"
   },
   "main": "server.js",
   "scripts": {
@@ -17,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "config": "^3.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
